更改资源内容

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorGray">#CCCCCC</color>
+    <color name="colorWall">#DCDCDC</color>
+    <color name="colorDeepGray">#969696</color>
 </resources>
