--- a/app/src/main/res/layout/activity_recorder.xml
+++ b/app/src/main/res/layout/activity_recorder.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorBlack"
 
     tools:context="org.live.module.publish.view.impl.PublishActivity">
 
