修复item无法点击问题

--- a/app/src/main/res/layout/item_listview_demo.xml
+++ b/app/src/main/res/layout/item_listview_demo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_demo_item"
+    android:descendantFocusability = "blocksDescendants"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical">
@@ -14,13 +15,12 @@
 
     <EditText
         android:id="@+id/et_demo_url"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_demo_item_name"
-        android:layout_marginTop="20dp"
-        />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp" />
 
     <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/icon_demo_chevron_right"
