更新资源文件内容 ->> colors.xml ->> string.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorGray">#CCCCCC</color>
     <color name="colorWall">#DCDCDC</color>
     <color name="colorDeepGray">#969696</color>
+    <color name="colorBlack">#000000</color>
 </resources>
