--- a/app/src/main/res/layout/item_listview_demo.xml
+++ b/app/src/main/res/layout/item_listview_demo.xml
@@ -3,7 +3,7 @@
     android:id="@+id/rl_demo_item"
     android:descendantFocusability = "blocksDescendants"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:gravity="center_vertical">
 
     <TextView
@@ -12,16 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/et_demo_url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_demo_item_name"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp" />
-
     <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/icon_demo_chevron_right"
         android:layout_width="wrap_content"
