--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -12,6 +12,14 @@
         android:visibility="gone"
         />
 
+    <ProgressBar
+        android:id="@+id/pb_play_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
+
     <!-- 关闭按钮-->
     <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/btn_play_close"
@@ -24,7 +32,7 @@
         app:materialIconSize="@dimen/icon_recorder_size"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="5dp"
         />
 
@@ -40,11 +48,8 @@
         app:materialIconSize="@dimen/icon_recorder_size"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="5dp"
         />
-
-
-
 
 </RelativeLayout>
