--- a/app/src/main/res/layout/fragment_recorder.xml
+++ b/app/src/main/res/layout/fragment_recorder.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center_horizontal"
-        android:paddingBottom="10dp"
+        android:paddingBottom="@dimen/icon_marign_bottom"
         android:orientation="horizontal"
         android:weightSum="7">
 
