--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    >
     <!-- 播放器的view -->
     <com.tencent.rtmp.ui.TXCloudVideoView
         android:id="@+id/vv_play_player"
@@ -10,6 +10,14 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:visibility="gone"
+        />
+
+    <ImageView
+        android:id="@+id/iv_play_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/bg"
+        android:scaleType="fitXY"
         />
 
     <ProgressBar
@@ -20,36 +28,43 @@
         android:visibility="gone"
         />
 
-    <!-- 关闭按钮-->
-    <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/btn_play_close"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_backgroud"
-        android:padding="5dp"
-        android:scaleType="center"
-        app:materialIcon="close"
-        app:materialIconSize="@dimen/icon_recorder_size"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="5dp"
-        />
+        android:paddingBottom="@dimen/icon_marign_bottom"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        >
 
-    <!-- 呼出输入文字的按钮 -->
-    <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/btn_play_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_backgroud"
-        android:padding="5dp"
-        android:scaleType="center"
-        app:materialIcon="message_text"
-        app:materialIconSize="@dimen/icon_recorder_size"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="5dp"
-        />
+        <!-- 呼出输入文字的按钮 -->
+        <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/btn_play_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_backgroud"
+            android:padding="5dp"
+            android:scaleType="center"
+            app:materialIcon="message_text"
+            app:materialIconSize="@dimen/icon_recorder_size"
+            />
+
+        <!-- 关闭按钮-->
+        <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/btn_play_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_backgroud"
+            android:padding="5dp"
+            android:scaleType="center"
+            app:materialIcon="close"
+            app:materialIconSize="@dimen/icon_recorder_size"
+            android:layout_alignParentRight="true"
+            />
+
+    </RelativeLayout>
+
+
+
 
 </RelativeLayout>
