--- a/app/src/main/res/layout/tab_item.xml
+++ b/app/src/main/res/layout/tab_item.xml
@@ -3,15 +3,29 @@
     android:id="@+id/rl_home_tab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="5dp">
+    android:paddingTop="2dp"
+    >
 
-    <ImageView
-        android:id="@+id/iv_home_tabIcon"
+ <!--   <ImageView
+        android:id="@+id/iv_home_tabIcon11"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:src="@drawable/tab_user"
         android:layout_centerHorizontal="true"
-        />
+        />-->
+
+    <net.steamcrafted.materialiconlib.MaterialIconView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/iv_home_tabIcon"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
+        android:padding="0dp"
+        app:materialIcon="home"
+        app:materialIconColor="@color/colorDeepGray"
+        app:materialIconSize="27dp"
+        android:background="@color/tab_background_color"
+        android:layout_centerHorizontal="true"
+    />
 
     <TextView
         android:id="@+id/tv_home_tabTitle"
@@ -19,8 +33,8 @@
         android:layout_height="wrap_content"
         android:text="test"
         android:layout_below="@id/iv_home_tabIcon"
+        android:textSize="12sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="3dp"
         />
 
 
