--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,12 @@
     <color name="colorWall">#DCDCDC</color>
     <color name="colorDeepGray">#969696</color>
     <color name="colorBlack">#000000</color>
-    <color name="tab_title_default_color">#000000</color>
-    <color name="tab_title_click_color">#B0CF10</color>
+
+    <!-- 这个系统的主题颜色 -->
+    <color name="themeColor">#2CE1B3</color>
+
+    <!-- 主页tab相关的颜色-->
+    <color name="tab_default_color">#969696</color>
+    <color name="tab_checked_color">#2CE1B3</color>
+    <color name="tab_background_color">#FFFFFD</color>
 </resources>
