--- a/app/src/main/res/drawable/linearlayout_fab_backgroud.xml
+++ b/app/src/main/res/drawable/linearlayout_fab_backgroud.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <!--背景颜色-->
-   <solid android:color="#FFFAFA" />
+    <solid android:color="@color/colorBlack" />
 
     <!--设置边距-->
     <padding
-        android:bottom="10dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:top="10dp" />
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp"
+        android:top="2dp" />
 
     <!--控制边界线颜色和大小-->
  <!--   <stroke
@@ -24,6 +24,6 @@
     -->
 
     <!--控制圆角大小-->
-    <corners android:radius="8dp" />
+    <corners android:radius="15dp" />
 
 </shape>
