--- a/app/src/main/res/drawable/round_backgroud.xml
+++ b/app/src/main/res/drawable/round_backgroud.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false" >
-    <solid android:color="@color/colorGray" />
+    <solid android:color="@color/colorBlack" />
     <padding
         android:left="2dp"
         android:top="1dp"
         android:right="2dp"
         android:bottom="1dp" />
     <solid
-        android:color="@color/colorGray" />
+        android:color="@color/colorBlack" />
     <stroke
         android:width="1dp"
         android:color="@android:color/white" />
