--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -4,6 +4,24 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite">
 
+    <!--标题栏-->
+    <!--标题栏-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/themeColor1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我的直播"
+            android:textColor="@color/colorWhite"
+            android:textSize="22dp"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
