--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorShallowBlack">#252121</color><!-- 浅黑 -->
+    <color name="colorShallowBlue">#ADD8E6</color><!-- 浅蓝 -->
     <!-- 这个系统的主题颜色 -->
     <color name="themeColor">#2CE1B3</color>
     <!-- 比themeColor深一点点 -->
