--- a/app/src/main/res/layout/fab_capture.xml
+++ b/app/src/main/res/layout/fab_capture.xml
@@ -5,7 +5,7 @@
     android:layout_width="138dip"
     android:layout_height="60dip"
     android:orientation="vertical">
-
+    <!-- 桌面浮动按钮 -->
     <net.steamcrafted.materialiconlib.MaterialIconView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
