--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -81,14 +81,23 @@
         <EditText
             android:id="@+id/et_chat_msg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3" />
+            android:layout_height="36dip"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="3"
+            android:background="@drawable/bg_edittext"
+            android:hint="请输入..."
+            android:maxLines="1"
+            android:padding="5dip"
+            android:textColorHint="#AAAAAA"
+            android:textSize="15dip" />
 
         <Button
             android:id="@+id/btn_chat_send"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="36dip"
             android:layout_weight="1"
-            android:text="发送" />
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/selector_blue_corners_button"
+            android:text="发 送" />
     </LinearLayout>
 </RelativeLayout>
