--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,9 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorShallowBlack">#252121</color><!-- 浅黑 -->
-    <color name="colorShallowBlue">#ADD8E6</color><!-- 浅蓝 -->
+    <color name="colorShallowBlue">#5CACEE</color><!-- 浅蓝 -->
+    <color name="colorBlue">#1874CD</color><!-- 深蓝 -->
+    <color name="colorWhite2">#FFFAFA</color>
     <!-- 这个系统的主题颜色 -->
     <color name="themeColor">#2CE1B3</color>
     <!-- 比themeColor深一点点 -->
